# ai-code-explorer

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  clippy.toml  docker-compose.yml
.github/: COPILOT_SETUP.md  copilot-instructions.md
.github/actions/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/instructions/: config-files.instructions.md  docker-compose.instructions.md  frontend-react.instructions.md  python-ai-service.instructions.md  rust-backend.instructions.md
.github/workflows/: python_ci.yml  rust_ci.yml
ai-service/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db.py  embedder.py  main.py  pyproject.toml  requests.http  requirements.txt
ai-service/src/ai_service/: __init__.py  constants.py  db.py  embedder.py  errors.py  exceptions.py  main.py  ollama_client.py  project_ingestor.py  utils.py
ai-service/src/ai_service/chunking/: README.md  __init__.py  strategies.py
ai-service/src/ai_service/db_setup/: README.md  __init__.py  query_embeddings.py  setup.py  store_embeddings.py
ai-service/src/ai_service/embeddings/: README.md  __init__.py  embedder.py  encoding.py  transformer.py
ai-service/src/ai_service/embeddings/tests/: __init__.py  conftest.py  test_encoding.py  test_transformer.py
ai-service/src/ai_service/handlers/: __init__.py  answer.py  ingest.py
ai-service/tests/: __init__.py  conftest.py  test_embeddings_and_storage.py  test_embeddings_integration.py  test_integration.py  test_llm_and_search.py  test_units.py
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  requests.http
backend/src/: app_config.rs  db.rs  error.rs  lib.rs  tracing.rs  utils.rs
backend/src/clients/: ai_service_client.rs  db.rs  mod.rs
backend/src/handlers/: answer.rs  answer_question.rs  ingest_project.rs  mod.rs
backend/src/handlers/ai/: answer.rs  ingest_project.rs
backend/src/types/: answer.rs  entities.rs  external.rs  ingestion.rs  internal.rs  mod.rs  response.rs
backend/tests/: integration_tests.rs  integration_tests_answer.rs  integration_tests_general.rs  integration_tests_ingestion.rs  utils.rs
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatBox.tsx  GitHubUpload.tsx
frontend/src/types/: external.ts  internal.ts
