[project]
name = "ai-service"
version = "0.1.0"

description = "AI service for text embedding and vector storage using ChromaDB"
authors = [{ name = "kristi" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chromadb (>=1.0.15,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",

]

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.7,<0.13.0"
pytest = ">=8.4.1,<9.0.0"

[tool.poetry.scripts]
start = "ai_service.main:main"

[tool.poetry]
packages = [{ include = "ai_service", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
