[project]
name = "ai-service"
version = "0.1.0"
license = "MIT"
description = "AI service component designed to enable semantic codebase search and intelligent Q&A over your source code. Also for general purpose usage."
authors = [{ name = "kristi" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chromadb>=1.0.15,<2.0.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "ollama>=0.5.1,<0.6.0",
    "gitpython>=3.1.45,<4.0.0",
    "fastapi>=0.116.1,<0.117.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.4.0,<3.0.0",
    "torchvision>=0.19.0,<1.0.0",
    "torchaudio>=2.4.0,<3.0.0",
]

[project.scripts]
start = "ai_service.main:main"

[tool.pdm]
includes = ["src"]

[[tool.pdm.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true
type = "index"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple/"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.4.2",
]
