[project]
name = "ai-service"
version = "0.1.0"
license = "MIT"
description = "AI service component designed to enable semantic codebase search and intelligent Q&A over your source code. Also for general purpose usage."
authors = [{ name = "kristi" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chromadb>=1.1.1",
    "sentence-transformers>=5.1.1",
    "ollama>=0.6.0",
    "gitpython>=3.1.45",
    "fastapi>=0.118.2"
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.4.2",
]

[project.scripts]
start = "ai_service.main:main"

[tool.pdm]
includes = ["src"]

[[tool.pdm.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true
type = "index"

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple/"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
